fix missing border on dt dropdown

--- a/databruce/static/databruce/css/datatables.css
+++ b/databruce/static/databruce/css/datatables.css
@@ -38,6 +38,10 @@ div.table-responsive>div.dt-container>div.row.mt-2:has(.dt-layout-end:empty) {
     margin-top: 0px !important;
 }
 
+div.dt-button-collection .dropdown-menu {
+    border-radius: var(--bs-border-radius) !important;
+}
+
 div.table-responsive>div.dt-container>div.row {
     margin-top: 0px !important;
 }
